--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,18 @@ __pycache__
 .snakemake
 describe_workflow.rst
 describe_jupyter_notebook.txt
-qiaseq_qc
+
+
+fastq
+reference
+results
+alignment
+prealignment
+snv_indels
+fqs
+qc
+ref
+.java
+.cache
+.tests
+temp
