--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,7 +1,112 @@
 ---
 
- resources: "resources.yaml"
- samples: "samples.tsv"
- units: "units.tsv"
+resources: "config/resources.yaml"
+samples: "config/samples.tsv"
+units: "config/units.tsv"
 
  default_container: "docker://hydragenetics/common:0.1.1"
+
+trimmer_software: "fastp_pe"
+
+fastp_pe:
+  container: "docker://hydragenetics/fastp:0.20.1"
+
+
+reference:
+  fasta: "/data/Twist_DNA/BWA_0.7.10_refseq/hg19.with.mt.fasta"
+  dict: "/data/Twist_DNA/BWA_0.7.10_refseq/hg19.with.mt.dict"
+  amb: "/data/Twist_DNA/BWA_0.7.10_refseq/hg19.with.mt.amb"
+  ann: "/data/Twist_DNA/BWA_0.7.10_refseq/hg19.with.mt.ann"
+  bwt: "/data/Twist_DNA/BWA_0.7.10_refseq/hg19.with.mt.bwt"
+  fai: "/data/Twist_DNA/BWA_0.7.10_refseq/hg19.with.mt.fai"
+  pac: "/data/Twist_DNA/BWA_0.7.10_refseq/hg19.with.mt.pac"
+  sa: "/data/Twist_DNA/BWA_0.7.10_refseq/hg19.with.mt.sa"
+  design_bed: "/home/lauri/Desktop/qiagen_qc/reference/QIAseq_DNA_panel.CDHS-42409Z-9864.roi.bed"
+  design_intervals: "/home/lauri/Desktop/qiagen_qc/reference/QIAseq_DNA_panel.CDHS-42409Z-9864.roi.interval_list"
+  skip_chrs:
+    - "chrM"
+    - "chrY"
+
+bcbio_variation_recall_ensemble:
+  container: "docker://gmsuppsala/somatic:develop"
+  callers:
+    - vardict
+    - mutect2
+    - freebayes
+
+freebayes:
+  container: "docker://hydragenetics/freebayes:1.3.1"
+
+haplotypecaller:
+  container: "docker://hydragenetics/gatk4:4.1.9.0"
+
+mutect2:
+  container: "docker://hydragenetics/gatk4:4.1.9.0"
+
+mutect2_gvcf:
+  container: "docker://hydragenetics/gatk4:4.1.9.0"
+
+vardict:
+  container: "docker://hydragenetics/vardict:1.8.3"
+
+ensemble_vcf:
+  container: "docker://gmsuppsala/somatic:develop"
+  callers:
+    - vardict
+    - mutect2
+  sort_order: "vardict,mutect2"
+
+vt_decompose:
+  container: "docker://hydragenetics/vt:2015.11.10"
+
+vt_normalize:
+  container: "docker://hydragenetics/vt:2015.11.10"
+
+bwa_mem:
+  container: "docker://hydragenetics/bwa_mem:0.7.17"
+
+picard_mark_duplicates:
+  container: "docker://hydragenetics/picard:2.25.0"
+
+picard_collect_alignment_summary_metrics:
+  container: "docker://hydragenetics/picard:2.25.0"
+
+picard_collect_hs_metrics:
+  container: "docker://hydragenetics/picard:2.25.0"
+
+picard_collect_duplication_metrics:
+  container: "docker://hydragenetics/picard:2.25.0"
+
+picard_collect_insert_size_metrics:
+  container: "docker://hydragenetics/picard:2.25.0"
+
+fastqc:
+  container: "docker://hydragenetics/fastqc:0.11.9"
+
+multiqc:
+  container: "docker://hydragenetics/multiqc:1.11"
+  config: "config/multiqc_config.yaml"
+  qc_files:
+    - "prealignment/fastp_pe/{sample}_{flowcell}_{lane}_{barcode}_{type}_fastp.json"
+    - "qc/fastqc/{sample}_{type}_fastq1_fastqc.zip"
+    - "qc/fastqc/{sample}_{type}_fastq2_fastqc.zip"
+    
+    - "qc/picard_collect_hs_metrics/{sample}_{type}.HsMetrics.txt"
+    - "qc/picard_collect_duplication_metrics/{sample}_{type}.duplication_metrics.txt"
+    - "qc/picard_collect_alignment_summary_metrics/{sample}_{type}.alignment_summary_metrics.txt"
+    - "qc/picard_collect_insert_size_metrics/{sample}_{type}.insert_size_metrics.txt"
+
+    - "qc/samtools_stats/{sample}_{type}.samtools-stats.txt"
+    - "qc/mosdepth/{sample}_{type}.mosdepth.summary.txt"
+    - "qc/mosdepth_bed/{sample}_{type}.per-base.bed.gz"
+
+mosdepth:
+  by: "500"
+  container: "docker://hydragenetics/mosdepth:0.3.2"
+  extra: "--fast-mode --no-per-base"
+  threads: 40
+
+mosdepth_bed:
+  container: "docker://hydragenetics/mosdepth:0.3.2"
+  extra: ""
+  threads: 40
